Vistas nueva, titulo de vista. Mesas abiertas por comuna

--- a/MilitappWeb.Entities/Resources/Ent_LegisladoresGanadores.Designer.resx
+++ b/MilitappWeb.Entities/Resources/Ent_LegisladoresGanadores.Designer.resx
@@ -120,6 +120,9 @@
   <data name="FirstName" xml:space="preserve">
     <value>NOMBRE</value>
   </data>
+  <data name="Indice" xml:space="preserve">
+    <value>#</value>
+  </data>
   <data name="LastName" xml:space="preserve">
     <value>APELLIDO</value>
   </data>
